--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 absl-py==2.1.0
 altair==5.5.0
-appnope==0.1.4
 asttokens==3.0.0
 astunparse==1.6.3
 attrs==25.1.0
@@ -12,7 +11,6 @@ click==8.1.8
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
-debugpy==1.8.12
 decorator==5.1.1
 executing==2.2.0
 flatbuffers==25.2.10
@@ -26,15 +24,10 @@ google-pasta==0.2.0
 grpcio==1.70.0
 h5py==3.12.1
 idna==3.10
-ipykernel==6.29.5
-ipython==8.32.0
-jedi==0.19.2
 Jinja2==3.1.5
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
 keras==2.15.0
 kiwisolver==1.4.8
 libclang==18.1.1
@@ -80,7 +73,7 @@ rpds-py==0.22.3
 rsa==4.9
 scikeras==0.12.0
 scikit-learn==1.6.1
-scipy==1.15.1
+scipy==1.15.1  # Only if you need it
 six==1.17.0
 smmap==5.0.2
 stack-data==0.6.3
@@ -91,10 +84,6 @@ tensorboard-data-server==0.7.2
 tensorflow==2.15.0
 tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.37.1
-tensorflow-macos==2.15.0
-tensorflow-metal==1.2.0
-termcolor==2.5.0
-threadpoolctl==3.5.0
 toml==0.10.2
 tornado==6.4.2
 tqdm==4.67.1
